--- a/flight-search-logo/style.css
+++ b/flight-search-logo/style.css
@@ -1,5 +1,5 @@
 i#logo {
-    background: blue;
+    background: #6868ff;
     display: block;
     width: 100px;
     height: 100px;
@@ -12,9 +12,10 @@ i#logo {
     top: 50%;
     left: 50%;
     font-size: 50px;
-    transform: translate(-50%, -50%);
     transform-origin: center;
     overflow: hidden;
+    animation: rotate 9s infinite, blink 3s infinite;
+    border: none;
 }
 
 body {
@@ -22,31 +23,51 @@ body {
 }
 
 #logo:before{
-    transform: translate(-50%);
     position: absolute;
     animation: fly 3s infinite;
 }
 @keyframes fly {
     0% {
-        transform: translate(-50%) scale(1) rotate(0);
+        transform: translate(-50%, 0px) scale(1) rotate(0);
     }
     30% {
-        transform: translate(300%) scale(1) rotate(0);
+        transform: translate(200%, 0px) scale(1) rotate(0);
         color: white;
     }
     31% {
-        transform: translate(300%) scale(0.5) rotate(180deg);
-        color: black;
+        transform: translate(50%, 10px) scale(0.67) rotate(180deg);
+        color: #6868ff;
     }
     60% {
-        transform: translate(-300%) scale(0.5) rotate(180deg);
-        color: black;
+        transform: translate(-250%, 10px) scale(0.67) rotate(180deg);
+        color: #6868ff;
     }
     61% {
-        transform: translate(-300%) scale(1) rotate(0);
+        transform: translate(-300%, 0px) scale(1) rotate(0);
         color: white;
     }
     100% {
-        transform: translate(-50%) scale(1) rotate(0);
+        transform: translate(-50%, 0px) scale(1) rotate(0);
     }
+}
+@keyframes rotate {
+    0% {
+        transform: translate(-50%, -50%) rotateZ(0deg);
+    }
+    50% {
+        transform: translate(-50%, -50%) rotateZ(180deg);
+    }
+    100% {
+        transform: translate(-50%, -50%) rotateZ(360deg);
+    }
+}
+
+@keyframes blink {
+    0% {
+        background: #6868ff;
+    }
+    50% {
+        background: white;
+    }
+
 }
